--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8">
     
+     <link rel="icon" 
+      type="image/png" 
+      href="http://open.manchester.gov.uk/images/padlock_icon_2.png">
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108205532-1"></script>
 <script>
