--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     
+    {% feed_meta %}
+    
      <link rel="icon" 
       type="image/png" 
       href="http://open.manchester.gov.uk/images/padlock_icon_2.png">
