--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,12 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+      <ul>
+  <li><a href="/">Home</a></li>
+  <li><a href="/">Articles</a></li>
+  <li><a href="/about-me">About me</a></li>
+  <li><a href="/contact">Contact</a></li>
+</ul>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
