--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#nav {
+ul #nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
