--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <ul id="nav">
+      <ul class="nav">
   <li><a href="/">Home</a></li>
   <li><a href="/">Articles</a></li>
   <li><a href="/about-me">About me</a></li>
