--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,10 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <ul class="nav">
   <li><a href="/" class="nav">Home</a></li>
-  <li><a href="/" class="nav">Articles</a></li>
-  <li><a href="/about-me" class="nav">About me</a></li>
-  <li><a href="/contact" class="nav">Contact</a></li>
+  <li><a href="/articles" class="nav">Articles</a></li>
+  <li><a href="/books" class="nav">Books</a></li>
+  <li><a href="/podcasts" class="nav">Podcasts</a></li>
+  <li><a href="/aboutme" class="nav">About me</a></li>
 </ul>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
