--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,9 +7,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/*.nav {
+.nav {
     list-style-type: none;
     margin: 0;
     padding: 0;
     color: white;
-}*/
+}
