--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <ul class="nav">
-        <li><a href="/" class="nav">Home</a></li>
-  <li><a href="/aboutme" class="nav">About me</a></li>
+        <li><a href="/" class="nav">HOME</a></li>
+  <li><a href="/aboutme" class="nav">ABOUT</a></li>
 </ul>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
