--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
-        <li><a href="/" class="nav">Articles</a></li>
+        <li><a href="/articles" class="nav">Articles</a></li>
   <li><a href="/aboutme" class="nav">About Me</a></li>
         
 </ul>
