--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
       type="image/png" 
       href="http://open.manchester.gov.uk/images/padlock_icon_2.png">
     
+     <!-- Font -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108205532-1"></script>
 <script>
