--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2>Analytics consultancy. Combining the power of machine learning and marketing.</h2>
+      <p>Analytics consultancy, combining the power of machine learning and marketing.</p>
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
         <li><a href="/articles" class="nav">Articles</a></li>
