--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <p>Analytics consultancy, combining the power of machine learning and marketing.</p>
+      <p>Using analytics, machine learning and marketing to rapidly and repeatedly deliver you insights and advantages from your data.</p>
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
         <li><a href="/articles" class="nav">Articles</a></li>
