--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <p>Using analytics, machine learning and marketing to rapidly and repeatedly deliver you insights and advantages from your data.</p>
+      <h1 class="project-name">MarketingLearning</h1>
+      <p>Combining analytics, machine learning and marketing to rapidly and repeatedly deliver you insights and advantages from your data.</p>
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
         <li><a href="/articles" class="nav">Articles</a></li>
