--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia,Cambria,"Times New Roman",Times,serif;
 }
 
 .nav {
