--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,11 @@ body {
   
 }
 
+.project-name {
+  font-family: Arial, Helvetica, sans-serif;
+
+}
+
 .project-description {
   font-style: italic;
 }
