--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <p class="project-description">Combining analytics, machine learning and marketing to rapidly and repeatedly deliver you insights and advantages from your data.</p>
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
-        <li><a href="/articles" class="nav">Articles</a></li>
+        <li><a href="/" class="nav">Articles</a></li>
   <li><a href="/aboutme" class="nav">About Me</a></li>
         
 </ul>
