--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,12 +52,13 @@
       {{ content }}
 
       <footer class="site-footer">
-        {% if site.github.is_project_page %}
-          
-        {% endif %}
-     
-        
-        <!-- Begin MailChimp Signup Form -->
+	             <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
 <div id="mc_embed_signup">
 <form action="https://gilianponte.us17.list-manage.com/subscribe/post?u=79c481cebbfaf518d2432220d&amp;id=878d792ec0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
@@ -79,6 +80,11 @@
 </div>
 
 <!--End mc_embed_signup-->
+
+	      
+        {% if site.github.is_project_page %}
+          
+        {% endif %}
         
       </footer>
     </section>
