--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     
      <link rel="icon" 
       type="image/png" 
-      href="http://open.manchester.gov.uk/images/padlock_icon_2.png">
+      href="">
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
