--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
         <li><a href="/" class="nav">Articles</a></li>
-  <li><a href="/aboutme" class="nav">About Me</a></li>
+  <li><a href="/aboutme" class="nav">About</a></li>
         
 </ul>
       {% if site.github.is_project_page %}
