--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">DataBrain</h1>
+      <h1 class="project-name">Normality</h1>
       <p class="project-description">Combining analytics, machine learning and marketing to rapidly and repeatedly deliver you insights and advantages from your data.</p>
       <ul class="nav">
         <li><a href="/" class="nav">Home</a></li>
