--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,7 @@ body {
 .project-name {
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+   list-style-type: none;
 }
 
 .project-description {
