--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     
      <link rel="icon" 
       type="image/png" 
-      href="">
+      href="https://i.imgur.com/w5bbKxz.png">
 
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
